RESOLVED FIXED147485
CRASH at WebCore::TaskDispatcher<WebCore::ScriptExecutionContext>::postTask + 38
https://bugs.webkit.org/show_bug.cgi?id=147485
Summary CRASH at WebCore::TaskDispatcher<WebCore::ScriptExecutionContext>::postTask + 38
Jer Noble
Reported 2015-07-31 00:30:19 PDT
CRASH at WebCore::TaskDispatcher<WebCore::ScriptExecutionContext>::postTask + 38
Attachments
Patch (3.09 KB, patch)
2015-07-31 00:34 PDT, Jer Noble
no flags
Follow-up fix (1.58 KB, patch)
2015-07-31 13:09 PDT, Jer Noble
commit-queue: commit-queue-
Jer Noble
Comment 1 2015-07-31 00:33:44 PDT
Jer Noble
Comment 2 2015-07-31 00:34:28 PDT
WebKit Commit Bot
Comment 3 2015-07-31 10:49:24 PDT
Comment on attachment 257911 [details] Patch Clearing flags on attachment: 257911 Committed r187655: <http://trac.webkit.org/changeset/187655>
WebKit Commit Bot
Comment 4 2015-07-31 10:49:30 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 5 2015-07-31 13:09:42 PDT
Reopening to attach new patch.
Jer Noble
Comment 6 2015-07-31 13:09:45 PDT
Created attachment 257948 [details] Follow-up fix
WebKit Commit Bot
Comment 7 2015-07-31 13:14:58 PDT
Comment on attachment 257948 [details] Follow-up fix Rejecting attachment 257948 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 257948, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: 7948 from bug 147485. Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 FAILED at 1. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/ChangeLog.rej patching file Source/WebCore/html/HTMLMediaElement.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/3650
Jer Noble
Comment 8 2015-07-31 13:21:23 PDT
Note You need to log in before you can comment on or make changes to this bug.